--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ asgiref==3.6.0
 backports.zoneinfo==0.2.1
 dj-database-url==1.2.0
 Django==4.1.6
+django-heroku==0.3.1
 django-on-heroku==1.1.2
 gunicorn==20.1.0
+psycopg2==2.9.5
 psycopg2-binary==2.9.5
 pytz==2022.7.1
 sqlparse==0.4.3
